Se agrega correctemente el drawerlayout y la conexion mediante los respectivos fragments.
Se incorpora segun lo especifica el material design. Ademas se configuran los titulos para cada seccion.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Central"
-            android:label="@string/title_activity_central">
+            android:name=".Central">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
