--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name="org.litepal.LitePalApplication"
@@ -38,7 +40,6 @@
         </activity>
         <activity
             android:name=".EpisodiosPlusInfo"
-            android:label="@string/title_activity_episodios_plus_info"
             android:parentActivityName=".Central"
             android:theme="@style/AppTheme" >
             <meta-data
