--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,6 @@ dependencies {
     compile 'com.google.android.exoplayer:exoplayer:r1.5.2'
     compile 'com.android.support:preference-v7:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
+    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
+    compile 'me.zhanghai.android.materialprogressbar:library:1.1.4'
 }
