--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,24 +3,24 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
     compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.ouiaboo.ouiaboo"
-        minSdkVersion 16
+        minSdkVersion 10
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
     packagingOptions {
-        exclude 'META-INF/maven/com.squareup.picasso/picasso/pom.properties'
-        exclude 'META-INF/maven/com.squareup.picasso/picasso/pom.xml'
+
     }
 }
 
@@ -34,10 +34,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.1.1'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.litepal.android:core:1.3.0'
-    compile 'com.loopj.android:android-async-http:1.4.9'
-    compile 'com.google.android.exoplayer:exoplayer:r1.5.2'
     compile 'com.android.support:preference-v7:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
-    compile 'com.github.castorflex.smoothprogressbar:library:1.1.0'
-    compile 'me.zhanghai.android.materialprogressbar:library:1.1.4'
 }
