--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.ouiaboo.ouiaboo"
-        minSdkVersion 10
+        minSdkVersion 16
         targetSdkVersion 23
         versionCode 1
         versionName "1.0"
@@ -36,4 +36,5 @@ dependencies {
     compile 'org.litepal.android:core:1.3.0'
     compile 'com.android.support:preference-v7:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
