--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name="AnalyticsApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ouiaboo_launcher"
+        android:icon="@mipmap/icon_launcher_v2"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
