--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,18 +9,22 @@ android {
         applicationId "com.ouiaboo.ouiaboo"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
     buildTypes {
         release {
             minifyEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    def newName = output.outputFile.name
+                    newName = newName.replace("app-release", "Ouiaboo")
+                    output.outputFile = new File(output.outputFile.parent, newName)
+                }
+            }
         }
-    }
-    packagingOptions {
-
     }
 }
 
