--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.ouiaboo.ouiaboo"
         minSdkVersion 16
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.0.3"
+        versionCode 5
+        versionName "1.0.3.1"
     }
     buildTypes {
         release {
@@ -41,4 +41,6 @@ dependencies {
     compile 'com.android.support:preference-v7:23.1.1'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.facebook.android:facebook-android-sdk:4.10.0'
+    compile 'com.github.paolorotolo:appintro:3.4.0'
 }
