--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "26.0.2"
     compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.ouiaboo.ouiaboo"
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 27
         versionCode 13
         versionName "1.1.6.1"
     }
@@ -18,10 +18,10 @@ android {
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             applicationVariants.all { variant ->
-                variant.outputs.each { output ->
-                    def newName = output.outputFile.name
+                variant.outputs.all { output ->
+                    def newName = output.outputFileName
                     newName = newName.replace("app-release", "Ouiaboo")
-                    output.outputFile = new File(output.outputFile.parent, newName)
+                    output.outputFileName = new File(output.outputFileName, newName)
                 }
             }
         }
@@ -30,14 +30,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:appcompat-v7:27.0.0'
+    compile 'com.android.support:design:27.0.0'
     compile 'org.jsoup:jsoup:1.10.2'
-    compile 'com.android.support:recyclerview-v7:25.3.1'
-    compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:27.0.0'
+    compile 'com.android.support:cardview-v7:27.0.0'
+    compile 'com.android.support:support-v4:27.0.0'
     compile 'org.litepal.android:core:1.5.1'
-    compile 'com.android.support:preference-v7:25.3.1'
+    compile 'com.android.support:preference-v7:27.0.0'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
