--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,13 @@
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.3'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath 'com.google.gms:google-services:1.4.0-beta3'
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,5 +22,6 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
