--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,14 +3,14 @@ apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "26.0.2"
+    buildToolsVersion '27.0.3'
     compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.ouiaboo.ouiaboo"
         minSdkVersion 16
         targetSdkVersion 27
-        versionCode 13
-        versionName "1.1.6.1"
+        versionCode 14
+        versionName "1.1.6.2"
     }
     buildTypes {
         release {
@@ -30,14 +30,14 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:27.0.0'
-    compile 'com.android.support:design:27.0.0'
-    compile 'org.jsoup:jsoup:1.10.2'
-    compile 'com.android.support:recyclerview-v7:27.0.0'
-    compile 'com.android.support:cardview-v7:27.0.0'
-    compile 'com.android.support:support-v4:27.0.0'
-    compile 'org.litepal.android:core:1.5.1'
-    compile 'com.android.support:preference-v7:27.0.0'
+    compile 'com.android.support:appcompat-v7:27.1.0'
+    compile 'com.android.support:design:27.1.0'
+    compile 'org.jsoup:jsoup:1.11.2'
+    compile 'com.android.support:recyclerview-v7:27.1.0'
+    compile 'com.android.support:cardview-v7:27.1.0'
+    compile 'com.android.support:support-v4:27.1.0'
+    compile 'org.litepal.android:core:1.6.1'
+    compile 'com.android.support:preference-v7:27.1.0'
     compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.facebook.android:facebook-android-sdk:4.10.0'
