--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     compileOptions.encoding = 'UTF-8'
     defaultConfig {
         applicationId "com.ouiaboo.ouiaboo"
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 14
         versionName "1.1.6.2"
     }
@@ -29,21 +29,21 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'com.android.support:appcompat-v7:27.1.0'
-    compile 'com.android.support:design:27.1.0'
-    compile 'org.jsoup:jsoup:1.11.2'
-    compile 'com.android.support:recyclerview-v7:27.1.0'
-    compile 'com.android.support:cardview-v7:27.1.0'
-    compile 'com.android.support:support-v4:27.1.0'
-    compile 'org.litepal.android:core:1.6.1'
-    compile 'com.android.support:preference-v7:27.1.0'
-    compile 'com.google.android.gms:play-services-analytics:8.1.0'
-    compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.facebook.android:facebook-android-sdk:4.10.0'
-    compile 'com.github.paolorotolo:appintro:4.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
-    compile 'com.github.bumptech.glide:glide:4.0.0-RC1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'org.jsoup:jsoup:1.11.2'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'org.litepal.android:core:1.6.1'
+    implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'com.google.android.gms:play-services-analytics:8.1.0'
+    implementation 'de.hdodenhof:circleimageview:2.1.0'
+    implementation 'com.facebook.android:facebook-android-sdk:4.10.0'
+    implementation 'com.github.paolorotolo:appintro:4.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    implementation 'com.github.bumptech.glide:glide:4.0.0-RC1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.0.0-RC1'
 
 }
